# daydream_initiative

./: LICENSE  README.md
.github/workflows/: deploy.yml
ldtatkinson/: .env.example  .gitignore  Cargo.toml  README.md  index.html  serve.py
ldtatkinson/.github/workflows/: ci.yml
ldtatkinson/public/: style.css  style.css.map  styles.scss
ldtatkinson/src/: app.rs  lib.rs  main.rs
ldtatkinson/src/components/: glass_panel.rs  layout.rs  mod.rs
ldtatkinson/src/pages/: daydream.rs  home.rs  meet_the_designer.rs  mod.rs  not_found.rs  portfolio.rs
ldtatkinson/src/pages/portfolio/: analyze_existing_emerging_technologies.rs  assessment_alignment.rs  design.rs  design_a_plan_for_dissemination_and_diffusion.rs  design_and_development.rs  engaging_presentation.rs  ethics_compliance.rs  ethics_constraints.rs  evaluation.rs  formative_eval.rs  foundations.rs  gap_analysis.rs  instructional_sequencing.rs  instructional_strategies.rs  interaction_design_and_usability.rs  key_concepts.rs  learning_processes.rs  mod.rs  motivational_design.rs  planning.rs  portfolio_home.rs  select_or_modify_materials.rs  solicit_accept_and_provide_feedback.rs  summative_eval.rs  systems_thinking.rs  target_population.rs  tech_skills.rs  vision_of_change.rs  visual_design.rs
ldtatkinson/srcs/components/: glass_panel.rs
ldtatkinson/srcs/pages/portfolio/: analyze_existing_emerging_technologies.rs  ethics_compliance.rs  ethics_constraints.rs  formative_eval.rs  gap_analysis.rs  instructional_sequencing.rs  instructional_strategies.rs  interaction_design_and_usability.rs  key_concepts.rs  learning_processes.rs  motivational_design.rs  select_or_modify_materials.rs  solicit_accept_and_provide_feedback.rs  summative_eval.rs  systems_thinking.rs  target_population.rs  tech_skills.rs  vision_of_change.rs  visual_design.rs
