[package]
name = "ldtatkinson"
version = "0.1.0"
edition = "2021"
authors = ["google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"

# --- Axum Server Dependencies ---
axum = "0.7.5"
tokio = { version = "1.37", features = ["full"] } # Required for async runtime
tower-http = { version = "0.5.2", features = ["fs"] } # Required for serving static files
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0", features = ["derive"] } # Used for JSON serialization/deserialization
serde_json = "1.0"

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "server"
path = "src/bin/server.rs"
