[package]
name = "ldtatkinson"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Backend dependencies
axum = { version = "0.7", optional = true }
tokio = { version = "1.37", features = ["full"], optional = true }
tower-http = { version = "0.5.2", features = ["fs"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[[bin]]
name = "client_app"
path = "src/main.rs"

[[bin]]
name = "server_app"
path = "src/axum_server.rs"
required-features = ["ssr"]

[features]
# FIX: Only enable hydration for the core library
hydrate = ["leptos/hydrate"]
ssr = ["dep:axum", "dep:tokio", "dep:tower-http", "dep:tracing", "dep:tracing-subscriber", "leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
