[package]
name = "ldtatkinson"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
leptos_axum = { version = "0.8", optional = true }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Backend dependencies
axum = { version = "0.8", optional = true }
tokio = { version = "1.37", features = ["full"], optional = true }
tower-http = { version = "0.5.2", features = ["fs"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[[bin]]
name = "client_app"
path = "src/main.rs"


[features]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "ldtatkinson"
# The site root folder is where cargo-leptos generate all output. Defaults to the root of the crate (because no workspace detected)
site-root = "target/site"
# The site-pkg-dir is where cargo-leptos generate the JS/WASM package. Defaults to "pkg"
site-pkg-dir = "pkg"
# The assets-dir is where cargo-leptos places static assets, like your CSS. Defaults to "/assets"
assets-dir = "assets"
# The name of the stylesheet is the name of the generated CSS file. Defaults to "style.css"
style-file = "style/main.scss"
# The browserlist query used for optimizing the CSS. Defaults to "defaults"
browserquery = "defaults"
# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false
# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"
# The profile to use for the lib target when compiling for release
lib-profile-release = "wasm-release"
